:sparkles: Add container, display and buttons to HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 </head>
 
 <body>
-
+    <main>
+        <div class="container">
+            <div id="display"></div>
+            <button class="btn-small" id="btn-clear">AC</button>
+            <button class="btn-small" id="btn-back">&lt;</button>
+            <button class="btn-small" id="btn-square">x<sup>2</sup></button>
+            <button class="btn-small" id="btn-divide">/</button>
+            <button class="btn-small" id="btn-7">7</button>
+            <button class="btn-small" id="btn-8">8</button>
+            <button class="btn-small" id="btn-9">9</button>
+            <button class="btn-small" id="btn-multiply">X</button>
+            <button class="btn-small" id="btn-4">4</button>
+            <button class="btn-small" id="btn-5">5</button>
+            <button class="btn-small" id="btn-6">6</button>
+            <button class="btn-small" id="btn-subtract">-</button>
+            <button class="btn-small" id="btn-1">1</button>
+            <button class="btn-small" id="btn-2">2</button>
+            <button class="btn-small" id="btn-3">3</button>
+            <button class="btn-small" id="btn-add">+</button>
+            <button class="btn-small" id="btn-point">.</button>
+            <button class="btn-small" id="btn-0">0</button>
+            <button class="btn-lge" id="btn-equals">=</button>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 
