--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <div class="container">
-            <div id="display">462783</div>
+            <div id="display">4627832</div>
             <button class="btn-small btn-func" id="btn-clear">AC</button>
             <button class="btn-small btn-func" id="btn-back">&lt;</button>
             <button class="btn-small btn-op" id="btn-square">x<sup>2</sup></button>
