:lipstick: Increase font size

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div id="display">4627832</div>
             <button class="btn-small btn-func btn-dark" id="btn-clear">AC</button>
-            <button class="btn-small btn-func btn-dark" id="btn-back">&lt;</button>
+            <button class="btn-small btn-func btn-dark inactive" id="btn-back">&lt;</button>
             <button class="btn-small btn-op btn-dark" id="btn-square">x<sup>2</sup></button>
             <button class="btn-small btn-op btn-dark" id="btn-divide">/</button>
             <button class="btn-small btn-num" id="btn-7">7</button>
@@ -29,7 +29,7 @@
             <button class="btn-small btn-num" id="btn-2">2</button>
             <button class="btn-small btn-num" id="btn-3">3</button>
             <button class="btn-small btn-op btn-dark" id="btn-add">+</button>
-            <button class="btn-small btn-dark" id="btn-point">.</button>
+            <button class="btn-small btn-dark inactive" id="btn-point">.</button>
             <button class="btn-small btn-num" id="btn-0">0</button>
             <button class="btn-lge btn-dark" id="btn-equals">=</button>
         </div>
